# danfault

./: .gitignore  README.md  gitconfig.sh
.claude/commands/: branch-analysis.md
.claude/skills/captains-log/: SKILL.md
.claude/skills/capture/: SKILL.md
.claude/skills/mermaid-extract/: SKILL.md
.claude/skills/obsidian-index/: SKILL.md
.claude/skills/project-init/: SKILL.md
.claude/skills/vault-help/: SKILL.md
.claude/skills/vault-report/: SKILL.md
.claude/skills/vault-session-review/: SKILL.md
docs/: branch-status.md  coffee.md  shell_script.md  spoti.md
dotfiles/: .alias  .export  .extra  .gitconfig  .methods  .source
examples/spotify/: README.md  corremo.json
git/: .gitconfig
latex/: latex.md
macos/: os_envs.sh  setup.sh  ssdasdasda  vscode.sh
python/: environment.yml
python/cookiecutter_templates/application/: cookiecutter.json
python/danfault/: .setup.py  pyproject.toml
python/danfault/danfault/: arc-folder-to-markdown-plan.md  arc.py  coffee.py  csvutils.py  dancompare.py  logs.py  main.py  matlab.py  spotify.py  utils.py  vault.py
python/danfault/danfault/elden_ring_tools/: elden_note.ipynb  refs.md
python/danfault/danfault/modules/: README.md  module_validator.py  modules.py
python/danfault/spoti-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
python/danfault/spoti-ui/src/: Analysis.jsx  App.jsx  ArtistChart.jsx  BpmHistogram.jsx  BpmTimeline.jsx  Library.jsx  index.css
python/danfault/tests/: import_test.py
python/mermaid-extract/: pyproject.toml
python/mermaid-extract/mermaid_extract/: extractor.py  main.py  server.py
python/obsidian-mcp/: pyproject.toml
python/obsidian-mcp/src/obsidian_mcp/: capture.py  indexer.py  retriever.py  server.py
scripts/: convert_pdf.py  dangrep.py
scripts/convert_pdf/: setup.py
scripts/convert_pdf/convert_pdf/: convert_pdf.py
scripts/dangrep/: README.md  setup.py
scripts/dangrep/dangrep/: dangrep.py
setup/: base_env.sh  setup.sh  utils.sh
terminal-configs/: README.md  backup.sh  restore.sh
tips/: docs.md
unix/: .bashrc  os_envs.sh  setup.sh
vscode/: vscode.md  vscode_config.py
vscode/.config/Code/User/User/globalStorage/: state.vscdb  state.vscdb.backup
vscode/.config/Code/User/User/workspaceStorage/1340668d6e4dd2ae60ba2308e931b9d6/: state.vscdb  workspace.json
vscode/.config/Code/User/User/workspaceStorage/180a07b47a82b3273c615fb7b95879a4/: state.vscdb  workspace.json
vscode/config/: keybindings.json  keybindings_backup.json  keybindings_mac.json  settings.json  settings_backup.json
vscode/extensions/: extensions.txt  installExtensions.py
vscode/snippets/: python.json
work/: .bashrc
(+31 files in other folders)
