# Metadata
[project]
name = "danfault"
version = "0.0.1"
authors = [
    {name = "Danilo Calhes", email = "dancps96@gmail.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "termcolor",
    "tqdm",
    "numpy"
]
[project.urls]
"Homepage" = "https://github.com/dancps/danfault"

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
    "pytest-cov",
    "isort",
    "mypy",
    "flake8",
    "black"
]

test = [
    "pytest",
    "pytest-cov"
] 

build = [
    "setuptools",
    "wheel", 
    "twine", 
    "build" 
]

doc = [
    "sphinx==3.5.4",
    "sphinx-rtd-theme==0.5.2",
    "markdownify==0.6.3",
    "jinja2==3.0.3"
]

[tool.setuptools.package-dir]
danfault = "danfault"

[project.scripts]
danfault = "danfault.main:main"

[tool.pytest.ini_options]
addopts = "--cov=mleng --cov-report xml --cov-report term-missing"# --cov-fail-under 95"

[tool.coverage.run]
source = ["danfault"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"