[project]
name = "mermaid-extract"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["typer", "rich"]

[project.scripts]
mermaid-extract = "mermaid_extract.main:app"

[[tool.uv.index]]
url = "https://pypi.org/simple/"
name = "pypi"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mermaid_extract"]
