[project]
name = "obsidian-mcp"
version = "0.1.0"
description = "MCP server for Obsidian vault retrieval"
authors = [{ name = "Danilo Calhes", email = "dancps96@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "model2vec>=0.3.0",
    "rank-bm25>=0.2.2",
    "python-frontmatter>=1.1.0",
    "numpy>=1.26.0",
    "pathspec>=0.12.1",
]

[project.scripts]
obsidian-mcp    = "obsidian_mcp.server:main"
obsidian-index  = "obsidian_mcp.indexer:main"
obsidian-capture = "obsidian_mcp.capture:main"

# All dependencies are public — use PyPI directly for this project
[[tool.uv.index]]
url = "https://pypi.org/simple/"
name = "pypi"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_mcp"]
